<resources>
    <string name="app_name">runnIN</string>
    <string name="ok">ok</string>
    <string name="request_location">Please enable Location Access, runnIn requires access to your location.</string>
    <string name="location_unavailable">Location Access Not Permitted</string>
    <string name="location_allowed">Location Access Granted</string>
    <string name="pace">"Pace"</string>
    <string name="split">"Split"</string>
    <string name="distance">"Distance"</string>
    <string name="meters">m</string>
    <string name="feet">ft</string>
    <string name="kilometers">km</string>
    <string name="miles">mi</string>
    <string name="elevation">Elevation</string>
    <string name="elgain">Elevation Gain</string>
    <string name="location">tbd</string>
    <string name="access_token">pk.eyJ1IjoidHN0ZW52b2xkIiwiYSI6ImNrYjZxZW1zbjAxNjAycm9iNjZ2MnhneTkifQ.Pm56qnLeN1A5jnl6a61X5g</string>
    <string name="logo">runnIN Logo</string>
    <string name="paceDefault">0:00</string>
    <string name="minperkm">min/km</string>
    <string name="minpermil">min/mil</string>


    <string name="mapview">MapView Icon</string>
    <string name="runGeoJsonId">geojson-source</string>
    <string name="runGeoJsonLayerId">geojson-layer</string>
    <string name="mapID">mapID</string>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="avatar">Avatar</string>
    <string name="age">Age</string>
    <string name="enterName">Donovan Bailey</string>
    <string name="enterAge">Age</string>
    <string name="units">Units</string>
    <string name="height">Height</string>
    <string name="kilo">kg</string>
    <string name="pound">lbs</string>
    <string name="centimeter">cm</string>
    <string name="foot">ft</string>
    <string name="inch">in</string>
    <string name="exampleDate">01/01/1970</string>
    <string name="birthday">Date Of Birth</string>
    <string name="save">Save</string>
    <string name="defaultHeight">185</string>
    <string name="defaultWeight">75</string>

    <string name="lastkmin">Last Kilometer In</string>
    <string name="lastmilin">Last Mile In</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">seconds</string>
    <string name="starting">Starting Run</string>
    <string name="stopping">Stopping Run</string>

    <string name="personalInfo">This information is not mandatory but improves the
        accuracy of some of the statistics.</string>
    <string name="info">Info</string>
    <string name="zero">0</string>
    <string name="calories">Calories</string>
    <string name="time">time</string>
    <string name="gps">gps</string>
    <string name="isRunning">isrunning</string>
    <string name="curitem">current item</string>
    <string name="filepath">filepath</string>
    <string name="avatarpath">avatar.png</string>
    <string name="resume">Resume</string>
    <string name="end">End</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="fastestpace">Fastest Pace</string>
    <string name="paceavg">Avg. Pace</string>
    <string name="minel">Min Elevation</string>
    <string name="maxel">Max Elevation</string>
    <string name="icon">icon</string>
    <string name="speed">Speed</string>
    <string name="invalidImage">Image selected is not valid</string>

    <string name="morningrun" type="id">Morning Run</string>
    <string name="afternoonrun" type="id">Afternoon Run</string>
    <string name="eveningrun" type="id">Evening Run</string>
    <string name="laterun" type="id">Late Night Run</string>
    <string name="earlyrun" type="id">Early Bird Run</string>
    <string name="enterrunname">Please enter a name for the run</string>
    <string name="voicecmd">Voice Commands</string>
    <string name="scron">Screen</string>
    <string name="gpsacc">GPS Accuracy</string>
    <string name="alwayson">Always On</string>
    <string name="sysdefault">System Default</string>
    <string name="auto">Auto</string>
    <string name="off">Off</string>
    <string name="min">Minimum</string>
    <string name="detailed">Detailed</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="permissionsmessage">"In order for runnIN to function correctly, The following permissions need to be granted."</string>
    <string name="welcome">Welcome to runnIN!</string>
    <string name="conti">Continue</string>
    <string name="donotshow">Do Not Show Again</string>
    <string name="readwritefiles">Read and Write File Access</string>
    <string name="internetaccess">Access to the Internet</string>
    <string name="gpsaccess">Location Access</string>
    <string name="battery">Disable Battery Optimizations</string>
    <string name="request_file">Please Allow File Read and Write Permission</string>
    <string name="filedenied">File Read/Write Permission Denied</string>
    <string name="cancel">Cancel</string>
    <string name="kcal"> kcal</string>
    <string name="channel_name">runnIn Notification Channel</string>
    <string name="channel_description">runnIn Notifications</string>
    <string name="currentdistance">Current Distance</string>
    <string name="milesString">Miles</string>
    <string name="kilometersString">Kilometers</string>
    <string name="endExit">Please end the run before exiting</string>
    <string name="currentpace">"Current Pace "</string>
    <string name="pausing">Pausing Run</string>
    <string name="resuming">Resuming Run</string>
    <string name="ending">Ending Run</string>


</resources>